--- a/web_cms/static/css/web_cms.css
+++ b/web_cms/static/css/web_cms.css
@@ -13,12 +13,12 @@ use Firefox's Firebug extension or Chrome's Inspector to find out other CSS ref
 
 
 .openerp .menu {
-    background: -moz-linear-gradient(center top , #000 0%, #999 8%, #fff 100%) repeat scroll 0 0 transparent;
+    /*background: -moz-linear-gradient(center top , #000 0%, #999 8%, #fff 100%) repeat scroll 0 0 transparent;*/
 }
 
 .openerp .menu a {
 	font-size: 90%;
     border:1px solid #ccc;
-    background: -moz-linear-gradient(center top , #fff 0%, #000 60%) repeat scroll 0 0 transparent;
+    /*background: -moz-linear-gradient(center top , #fff 0%, #000 60%) repeat scroll 0 0 transparent;*/
 }
          
