--- a/updis/static/src/css/common.css
+++ b/updis/static/src/css/common.css
@@ -4,7 +4,8 @@
     font-family:"宋体";
 	font-size:12px;
 	line-height:20px;
-	background:url('../img/top_bj.jpg') repeat-x #f4f4f2;
+	background-color: #f4f4f2;
+	/*background:url('../img/top_bj.jpg') repeat-x #f4f4f2;*/
 	}  
 ul{
 	margin:0;
