--- a/updis/static/src/css/style.css
+++ b/updis/static/src/css/style.css
@@ -899,7 +899,7 @@ a:hover { text-decoration:underline;}
 #main h1 {font-size:2.1em;}
 #main h2 {font-size:1.9em;}
 #main h3 {font-size:1.7em;}
-#main h4 {font-size:1.5em;}
+#main h4 {font-size:1.0em;} /*-5 from original*/
 #main h5 {font-size:1.3em;}
 #main h6 {font-size:.9em;color: #222;text-transform: uppercase;font-weight: 600;letter-spacing: 1px;padding-bottom: 5px !important;}
 #sidebar h2 {padding-bottom: 5px;font-size:10px;}
