--- a/updis/static/src/css/internal-home.css
+++ b/updis/static/src/css/internal-home.css
@@ -121,10 +121,34 @@
 	list-style-type: none;
 	border: 1px solid #E0E0E0;
 	margin-right: 1px;
+	margin-top: 25px;
 }
 .tab_con {
 	background-color: white;
 	padding: 20px 0 10px;
+	min-height: 150px;
+}
+.tab_con .nr {
+	width: 424px;
+	margin: 14px 0px 0 20px;
+}
+.tab_con .nr p {
+	margin: 0 auto;
+	height: 24px;
+	line-height: 24px;
+	width: 424px;
+	overflow: hidden;
+	/*color: #357386;*/
+}
+#bodyContent a, #sidebar a, .content_full_width a {
+	color: #4E4E4E;
+	text-decoration: none;
+}
+.tab_con .nr p a {
+	padding-right: 12px;	
+}
+#content p{
+	padding: 0;
 }
 #content .tabs {
 	position: absolute;
@@ -199,4 +223,7 @@
 }
 .department-container .tabs {
 	margin-left: 18px;
+}
+.page-meta{
+	color: gray;
 }
