--- a/updis/static/src/css/internal-home.css
+++ b/updis/static/src/css/internal-home.css
@@ -171,7 +171,7 @@
 	position: relative;
 	margin: 0 auto;
 	width: 100%;
-	height: 116px;
+	height: 128px;
 	border-bottom: 1px solid #E0E0E0;
 }
 .tab_con dl.short dt {
@@ -179,7 +179,7 @@
 	margin: 0 12px 0 20px;
 	float: left;
 	height: 98px;
-	background: url('../img/tab_bj3.gif') repeat-x center 92px;
+	background: url('/updis/static/src/img/tab_bj3.gif') repeat-x center 92px;
 }
 .tab_con dl.short dd {
 	width: 270px;
