--- a/updis/wizard/suozhangshenpi.xml
+++ b/updis/wizard/suozhangshenpi.xml
@@ -1,6 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
 	<data>
-		
+		<record id="suozhangshenpi_form_view" model="ir.ui.view">
+			<field name="name">suozhangshenpi.form.view</field>
+			<field name="model">project.suozhangshenpi</field>
+			<field name="arch" type="xml">
+				<form string="suozhangshenpi" version="7.0">
+					<group string="项目内容" col="4">
+						<!-- 所长审批内容 -->
+						<field name="yaoqiuxingchengwenjian"/>	
+						<field name="yinhanyaoqiu"/>	
+						<field name="difangfagui"/>		
+						<field name="fujiayaoqiu"/>		
+						<field name="hetongyizhi"/>	
+						<field name="ziyuan"/>		
+						<field name="shebei"/>		
+						<field name="gongqi"/>		
+						<field name="shejifei"/>	
+					</group>
+					<group string="通知设置">
+						<field name="send_email"/>	
+						<field name="send_sms"/>
+					</group>
+					<footer>
+						<button name="pass" string="审批通过" type="object" class="oe_highlight"/>
+						<button name="reject" string="发回重审" type="object" class="oe_highlight"/>
+						<button string="Cancel" class="oe_link" special="cancel"/>
+					</footer>
+				</form>
+			</field>
+		</record>
+		<record id="suozhangshenpi_act" model="ir.actions.act_window">
+			<field name="name">所长审批</field>
+			<field name="res_model">project.suozhangshenpi</field>
+			<field name="view_type">form</field>
+			<field name="view_mode">form</field>
+			<field name="view_id" ref="suozhangshenpi_form_view" />
+			<field name="target">new</field>
+		</record>
 	</data>
 </openerp>
