--- a/updis/wizard/suozhangshenpi.xml
+++ b/updis/wizard/suozhangshenpi.xml
@@ -23,15 +23,15 @@
 						<field name="send_sms"/>
 					</group>
 					<footer>
-						<button name="pass" string="审批通过" type="object" class="oe_highlight"/>
-						<button name="reject" string="发回重审" type="object" class="oe_highlight"/>
+						<button name="accept" string="提交" type="object" class="oe_highlight"/>
+						<button name="reject" string="打回" type="object" class="oe_highlight"/>
 						<button string="Cancel" class="oe_link" special="cancel"/>
 					</footer>
 				</form>
 			</field>
 		</record>
 		<record id="suozhangshenpi_act" model="ir.actions.act_window">
-			<field name="name">所长审批</field>
+			<field name="name">提交经营室</field>
 			<field name="res_model">project.suozhangshenpi</field>
 			<field name="view_type">form</field>
 			<field name="view_mode">form</field>
