--- a/updis/wizard/suozhangshenpi.xml
+++ b/updis/wizard/suozhangshenpi.xml
@@ -19,8 +19,11 @@
 						<field name="shejifei"/>	
 					</group>
 					<group string="通知设置">
-						<field name="send_email"/>	
+						<field name="send_email"/>
 						<field name="send_sms"/>
+					</group>
+					<group string="Review Comment">
+						<field name="comment" nolabel="1"/>
 					</group>
 					<footer>
 						<button name="accept" string="提交" type="object" class="oe_highlight"/>
