--- a/updis/wizard/suozhangshenpi.xml
+++ b/updis/wizard/suozhangshenpi.xml
@@ -1,11 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
 	<data>
-		<record id="suozhangshenpi_form_view" model="ir.ui.view">
+		<record id="suozhangshenpi_form_view" model="ir.ui.view">			
 			<field name="name">suozhangshenpi.form.view</field>
 			<field name="model">project.suozhangshenpi</field>
 			<field name="arch" type="xml">
 				<form string="suozhangshenpi" version="7.0">
+					<group string="基本信息" col="4">
+						<field name="guimo"/>
+						<field name="jianyishejibumen_id"/>
+						<field name="jianyixiangmufuzeren_id"/>
+						<field name="jiafang_id"/>	
+						<field name="waibao"/>
+						<field name="shizhenpeitao"/>
+						<field name="duofanghetong"/>
+					</group>
+					<group string="Review Comment">
+						<field name="comment" />
+					</group>
+					<footer>
+						<button name="accept" string="提交" type="object" class="oe_highlight"/>
+						<button name="reject" string="打回" type="object" class="oe_highlight"/>
+						<button string="Cancel" class="oe_link" special="cancel"/>
+					</footer>
+				</form>
+			</field>
+		</record>
+		<record id="tijiaojingyingshi_act" model="ir.actions.act_window">
+			<field name="name">所长审批</field>
+			<field name="res_model">project.suozhangshenpi</field>
+			<field name="view_type">form</field>
+			<field name="view_mode">form</field>
+			<field name="view_id" ref="suozhangshenpi_form_view" />
+			<field name="target">new</field>
+		</record>
+		<record id="tijiaojingyingshi_form_view" model="ir.ui.view">
+			<field name="name">tijiaojingyingshi.form.view</field>
+			<field name="model">project.tijiaojingyingshi</field>
+			<field name="arch" type="xml">
+				<form string="tijiaojingyingshi" version="7.0">
 					<group string="项目内容" col="4">
 						<!-- 所长审批内容 -->
 						<field name="yaoqiuxingchengwenjian"/>	
@@ -34,12 +67,12 @@
 				</form>
 			</field>
 		</record>
-		<record id="suozhangshenpi_act" model="ir.actions.act_window">
+		<record id="tijiaojingyingshi_act" model="ir.actions.act_window">
 			<field name="name">提交经营室</field>
-			<field name="res_model">project.suozhangshenpi</field>
+			<field name="res_model">project.tijiaojingyingshi</field>
 			<field name="view_type">form</field>
 			<field name="view_mode">form</field>
-			<field name="view_id" ref="suozhangshenpi_form_view" />
+			<field name="view_id" ref="tijiaojingyingshi_form_view" />
 			<field name="target">new</field>
 		</record>
 	</data>
