--- a/updis/wizard/suozhangshenpi.xml
+++ b/updis/wizard/suozhangshenpi.xml
@@ -2,32 +2,38 @@
 <openerp>
 	<data>
 		<record id="project_review_suozhangshenpi_form_form_view" model="ir.ui.view">			
-			<field name="name">project.review.suozhangshenpi_form.view</field>
-			<field name="model">project.review.suozhangshenpi_form</field>
+			<field name="name">project.review.suozhangshenpi.form.view</field>
+			<field name="model">project.review.suozhangshenpi.form</field>
 			<field name="arch" type="xml">
 				<form string="suozhangshenpi" version="7.0">
+					<field name="state" widget="statusbar" readonly="1" statusbar_visible="submitted,accepted"/>
 					<group string="基本信息" col="4">
-						<field name="guimo"/>
-						<field name="jianyishejibumen_id"/>
-						<field name="jianyixiangmufuzeren_id"/>
-						<field name="jiafang_id"/>	
-						<field name="waibao"/>
-						<field name="shizhenpeitao"/>
-						<field name="duofanghetong"/>
+						<field name="guimo" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
+						<field name="jianyishejibumen_id" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
+						<field name="jianyixiangmufuzeren_id" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
+						<field name="jiafang_id" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
+						<field name="waibao" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
+						<field name="shizhenpeitao" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
+						<field name="duofanghetong" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
+					</group>
+					<group string="通知设置">
+						<field name="send_email" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
+						<field name="send_sms" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
 					</group>
 					<group string="Review Comment">
-						<field name="reviewer_id" domain="[('groups_id','=',%(group_up_project_suozhang)d)]" />
+						<field name="reviewer_id" domain="[('groups_id','=',%(group_up_project_suozhang)d)]"  attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
 						<field name="comment" />
 					</group>
 					<footer>
-						<button name="accept" string="提交" type="object" class="oe_highlight"/>
-						<button name="reject" string="打回" type="object" class="oe_highlight"/>
+						<button name="suozhang_review_submit" string="提交所长审批" states="draft" class="oe_highlight"/>
+						<button name="suozhang_review_accept" string="审批通过" states="submitted" class="oe_highlight"/>
+						<button name="suozhang_review_reject" string="打回" states="submitted" class="oe_highlight"/>
 						<button string="Cancel" class="oe_link" special="cancel"/>
 					</footer>
 				</form>
 			</field>
 		</record>
-		<record id="suozhangshenpi_form_view" model="ir.ui.view">			
+		<!-- <record id="suozhangshenpi_form_view" model="ir.ui.view">			
 			<field name="name">suozhangshenpi.form.view</field>
 			<field name="model">project.suozhangshenpi</field>
 			<field name="arch" type="xml">
@@ -65,8 +71,7 @@
 			<field name="model">project.tijiaojingyingshi</field>
 			<field name="arch" type="xml">
 				<form string="tijiaojingyingshi" version="7.0">
-					<group string="项目内容" col="4">
-						<!-- 所长审批内容 -->
+					<group string="项目内容" col="4">						
 						<field name="yaoqiuxingchengwenjian"/>	
 						<field name="yinhanyaoqiu"/>	
 						<field name="difangfagui"/>		
@@ -100,6 +105,6 @@
 			<field name="view_mode">form</field>
 			<field name="view_id" ref="tijiaojingyingshi_form_view" />
 			<field name="target">new</field>
-		</record>
+		</record> -->
 	</data>
 </openerp>
