--- a/updis/wizard/suozhangshenpi_workflow.xml
+++ b/updis/wizard/suozhangshenpi_workflow.xml
@@ -91,17 +91,17 @@
 			<field name="action">write({'state':'rejected'})</field>
 		</record>
 		<!-- Transitions -->
-		<record model="workflow.transition">
+		<record id="trans_suozhenshenpi_1" model="workflow.transition">
 			<field name="act_from" ref="act_suozhangshenpi_draft"/>
 			<field name="act_to" ref="act_suozhangshenpi_submitted"/>
 			<field name="signal">suozhang_review_submit</field>
 		</record>
-		<record model="workflow.transition">
+		<record id="trans_suozhenshenpi_2" model="workflow.transition">
 			<field name="act_from" ref="act_suozhangshenpi_submitted"/>
 			<field name="act_to" ref="act_suozhangshenpi_accepted"/>
 			<field name="signal">suozhang_review_accept</field>
 		</record>
-		<record model="workflow.transition">
+		<record id="trans_suozhenshenpi_3" model="workflow.transition">
 			<field name="act_from" ref="act_suozhangshenpi_submitted"/>
 			<field name="act_to" ref="act_suozhangshenpi_rejected"/>
 			<field name="signal">suozhang_review_reject</field>
