--- a/updis/wizard/suozhangshenpi.xml
+++ b/updis/wizard/suozhangshenpi.xml
@@ -21,6 +21,7 @@
 						<field name="send_sms" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
 					</group>
 					<group string="Review Comment">
+						<field name="review_log" />
 						<field name="reviewer_id" domain="[('groups_id','=',%(group_up_project_suozhang)d)]"  attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
 						<field name="comment" />
 					</group>
