--- a/updis/wizard/suozhangshenpi.xml
+++ b/updis/wizard/suozhangshenpi.xml
@@ -37,9 +37,9 @@
 						<field name="comment" />
 					</group>
 					<footer>
-						<button name="suozhang_review_submit" string="提交所长审批" states="draft" class="oe_highlight"/>
-						<button name="suozhang_review_accept" string="审批通过" states="submitted" class="oe_highlight"/>
-						<button name="suozhang_review_reject" string="打回" states="submitted" class="oe_highlight"/>
+						<button name="suozhangshenpi_review_submit" string="提交所长审批" states="draft" class="oe_highlight"/>
+						<button name="suozhangshenpi_review_accept" string="审批通过" states="submitted" class="oe_highlight"/>
+						<button name="suozhangshenpi_review_reject" string="打回" states="submitted" class="oe_highlight"/>
 						<button string="Cancel" class="oe_link" special="cancel"/>
 					</footer>
 				</form>
