--- a/updis/wizard/jingyingshi_server_actions.xml
+++ b/updis/wizard/jingyingshi_server_actions.xml
@@ -25,31 +25,31 @@
 			<field name="model_id" ref="updis.model_project_review_jingyingshishenpi_form"></field>
 			<field name="srcmodel_id" ref="sms.model_sms_sms"></field>			
 		</record>
-		<record model="ir.server.object.lines">
+		<record id="lines_jingyingshi_content" model="ir.server.object.lines">
 			<field name="server_id" ref="jingyingshishenpi_send_sms" />
 			<field name="col1" ref="sms.field_sms_sms_content" />
 			<field name="type">equation</field>
 			<field name="value">u"%s于%s提交了项目%s"%(object.submitter_id.name,object.create_date,object.project_id.name)</field>
 		</record>
-		<record model="ir.server.object.lines">
+		<record id="lines_jingyingshi_to" model="ir.server.object.lines">
 			<field name="server_id" ref="jingyingshishenpi_send_sms" />
 			<field name="col1" ref="sms.field_sms_sms_to" />
 			<field name="type">equation</field>
 			<field name="value">object.reviewer_id.mobile</field>
 		</record>
-		<record model="ir.server.object.lines">
+		<record id="lines_jingyingshi_from" model="ir.server.object.lines">
 			<field name="server_id" ref="jingyingshishenpi_send_sms" />
 			<field name="col1" ref="sms.field_sms_sms_from" />
 			<field name="type">equation</field>
 			<field name="value">object.submitter_id.mobile</field>
 		</record>
-		<record model="ir.server.object.lines">
+		<record id="lines_jingyingshi_res_id" model="ir.server.object.lines">
 			<field name="server_id" ref="jingyingshishenpi_send_sms" />
 			<field name="col1" ref="sms.field_sms_sms_res_id" />
 			<field name="type">equation</field>
 			<field name="value">object.id</field>
 		</record>
-		<record model="ir.server.object.lines">
+		<record id="lines_jingyingshi_model" model="ir.server.object.lines">
 			<field name="server_id" ref="jingyingshishenpi_send_sms" />
 			<field name="col1" ref="sms.field_sms_sms_model" />
 			<field name="type">value</field>
@@ -65,31 +65,31 @@
 			<field name="write_id">object.project_id</field>
 		</record>
 		<!-- 经营室审批单 -->
-		<record model="ir.server.object.lines">
+		<record id="lines_jingyingshi_xiangmubianhao" model="ir.server.object.lines">
 			<field name="server_id" ref="jingyingshishenpi_update_project" />
 			<field name="col1" ref="updis.field_project_project_xiangmubianhao" />
 			<field name="type">equation</field>
 			<field name="value">object.xiangmubianhao</field>
 		</record>
-		<record model="ir.server.object.lines">
+		<record id="lines_jingyingshi_pingshenfangshi" model="ir.server.object.lines">
 			<field name="server_id" ref="jingyingshishenpi_update_project" />
 			<field name="col1" ref="updis.field_project_project_pingshenfangshi" />
 			<field name="type">equation</field>
 			<field name="value">object.pingshenfangshi</field>
 		</record>
-		<record model="ir.server.object.lines">
+		<record id="lines_jingyingshi_yinfacuoshi" model="ir.server.object.lines">
 			<field name="server_id" ref="jingyingshishenpi_update_project" />
 			<field name="col1" ref="updis.field_project_project_yinfacuoshi" />
 			<field name="type">equation</field>
 			<field name="value">object.yinfacuoshi</field>
 		</record>
-		<record model="ir.server.object.lines">
+		<record id="lines_jingyingshi_renwuyaoqiu" model="ir.server.object.lines">
 			<field name="server_id" ref="jingyingshishenpi_update_project" />
 			<field name="col1" ref="updis.field_project_project_renwuyaoqiu" />
 			<field name="type">equation</field>
 			<field name="value">object.renwuyaoqiu</field>
 		</record>
-		<record model="ir.server.object.lines">
+		<record id="lines_jingyingshi_chenjiebumen_id" model="ir.server.object.lines">
 			<field name="server_id" ref="jingyingshishenpi_update_project" />
 			<field name="col1" ref="updis.field_project_project_chenjiebumen_id" />
 			<field name="type">equation</field>
