--- a/updis/wizard/suozhangshenpi.xml
+++ b/updis/wizard/suozhangshenpi.xml
@@ -14,26 +14,26 @@
 						<field name="jiafang_id" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
 						<field name="waibao" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
 						<field name="shizhenpeitao" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
-						<field name="duofanghetong" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
+						<field name="duofanghetong" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>						
+						<field name="shifoutoubiao" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
 					</group>
 					<group string="项目内容" col="4">						
-						<field name="yaoqiuxingchengwenjian" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-						<field name="yinhanyaoqiu" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-						<field name="difangfagui" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>		
-						<field name="fujiayaoqiu" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>		
-						<field name="hetongyizhi" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-						<field name="ziyuan" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>		
-						<field name="shebei" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>		
-						<field name="gongqi" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>		
-						<field name="shejifei" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-						<field name="shifoutoubiao" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
+						<field name="yaoqiuxingchengwenjian" attrs="{'readonly':[('state','=','draft')]}"/>	
+						<field name="yinhanyaoqiu" attrs="{'readonly':[('state','=','draft')]}"/>	
+						<field name="difangfagui" attrs="{'readonly':[('state','=','draft')]}"/>		
+						<field name="fujiayaoqiu" attrs="{'readonly':[('state','=','draft')]}"/>		
+						<field name="hetongyizhi" attrs="{'readonly':[('state','=','draft')]}"/>	
+						<field name="ziyuan" attrs="{'readonly':[('state','=','draft')]}"/>		
+						<field name="shebei" attrs="{'readonly':[('state','=','draft')]}"/>		
+						<field name="gongqi" attrs="{'readonly':[('state','=','draft')]}"/>		
+						<field name="shejifei" attrs="{'readonly':[('state','=','draft')]}"/>	
 					</group>
 					<group string="明示要求" col="4">
 						<!-- 明示要求 -->
-						<field name="zhaobiaoshu" />		
-						<field name="weituoshu" />	
-						<field name="xieyicaoan" />		
-						<field name="koutouyaoqiujilu" />
+						<field name="zhaobiaoshu" attrs="{'readonly':[('state','=','draft')]}" />		
+						<field name="weituoshu" attrs="{'readonly':[('state','=','draft')]}" />	
+						<field name="xieyicaoan" attrs="{'readonly':[('state','=','draft')]}" />		
+						<field name="koutouyaoqiujilu" attrs="{'readonly':[('state','=','draft')]}" />
 					</group>
 					<group string="通知设置">
 						<field name="send_email" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
